solved small bugs on mobile layout

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h1 {
 ===================== */
 
 .container {
-  padding: 1.5em 1em;
+  padding: 1.4em 1em;
   background: #fafafa;
 }
 
@@ -82,10 +82,6 @@ h1 {
   margin-top: 3.5em;
 }
 
-.gallery > .person:nth-child(2) {
-  margin-top: 3.5em;
-}
-
 .image {
   width: 85%;
   height: 210px;
@@ -101,7 +97,7 @@ h1 {
   position: absolute;
   width: 60%;
   margin: 0;
-  right: -22%;
+  right: -25%;
   top: 17%;
   transform: rotate(90deg);
 }
@@ -109,6 +105,7 @@ h1 {
 .footer {
   margin-top: 6em;
   margin-bottom: 0;
+  padding-bottom: 0;
   display: flex;
   justify-content: center;
 }
